--- a/index.html
+++ b/index.html
@@ -8,15 +8,41 @@
   
   <title>Frontend Mentor | Interactive card details form</title>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-  0000 0000 0000 0000
+  <div class="outer-container">
+
+    <div class="card-container">
+      <img src="images/bg-card-back.png" alt="" id="back">
+      <img src="images/bg-card-front.png" alt="" id="front">
+    </div>
+
+    <div class="form-container">
+
+      <form action="">
+
+        <label for="name">Cardholder Name</label>
+        <input type="text" name="" id="name" placeholder="e.g. Jane Appleseed">
+
+        <label for="number">Card Number</label>
+        <input type="tel" name="" id="number" placeholder="e.g. 1234 5678 9123 0000" maxlength="19">
+
+        <label for="month, year">Exp. Date (MM/YY)</label>
+        <input type="number" min="1" max="12" id="month" placeholder="MM">
+
+        <input type="number" name="" id="year" min="2000" max="2022" id="year" placeholder="YY">
+
+        <label for="cvv">CVV</label>
+        <input type="tel" maxlength="4" id="cvv">
+      </form>
+
+    </div>
+
+  </div>
+
+  <!-- 0000 0000 0000 0000
   Jane Appleseed
   00/00
 
@@ -33,19 +59,21 @@
   YY
 
   CVC
-  e.g. 123
-
-  Confirm
+  e.g. 123 -->
+<!-- 
+  Confirm -->
 
   <!-- Completed state start -->
 
-  Thank you!
+  <!-- Thank you!
   We've added your card details
-  Continue
+  Continue -->
   
-  <div class="attribution">
+
+
+  <!-- <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
+    Coded by <a href="#">Harry Steele</a>.
+  </div> -->
 </body>
 </html>
